# EpicMickeyLib

./: .gitignore  .project  ENGLISH_NTSC_RVL.dct  README.md  collectibles.clb  collectibles.clb.json  cpp_finder.py  eb_villagetest.bin.json  levels.pak  main.py  pack_reimport.py  pack_scene.py  pom.xml  pyproject.toml  run.sh  setup.py  temp.nif  test.py  unpack_assets.py
.github/workflows/: python-package.yml
epicmickeylib/formats/: __init__.py  aipathdatabase.py  bsq.py  bsq_shared.py  clb.py  collision.py  dictionary.py  hkx.py  nif.py  packfile.py  scene.py  script.py  texture.py
epicmickeylib/internal/: __init__.py  filemanipulator.py
epicmickeylib/utils/: __init__.py  mass_unpacker.py  packer.py  unpacker.py
formats/: aipathdatabase.py  bsq.py  bsq_shared.py  clb.py  collision.py  dict.py  dict_old.py  dictionary.py  nif.py  packfile.py  scene.py
internal/: filemanipulator.py
levels/Levels/: 2D_AlpineClimbers01_Replay.level  2D_Beanstalk.level  2D_Castaway01.level  2D_Castaway02.level  2D_ClockCleaners01.level  2D_ClockCleaners02.level  2D_Fantasia01.level  2D_Fantasia02.level  2D_Fantasia03.level  2D_Fantasia04.level  2D_HauntedHouse01.level  2D_HauntedHouse02.level  2D_HauntedHouse03.level  2D_JungleRhythm01.level  2D_JungleRhythm02.level  2D_LonesomeGhost01.level  2D_LonesomeGhost02.level  2D_MadDoctor01.level  2D_MadDoctor02.level  2D_MechanicalMan01.level  2D_MechanicalMan02.level  2D_MickeySteamroller01.level  2D_Plutopia01.level  2D_Plutopia02.level  2D_Shanghaied.level  2D_SleepingBeauty.level  (+148 more)
utils/: mass_unpacker.py  packer.py  unpacker.py
(+399 files in other folders)
