[project]
name = "EpicMickeyLib"
version = "0.0.1"
authors = [
  { name="Ryan 'abso1utezer0' Koop", email="ryanckoop1@gmail.com" },
]
description = "A Python library for working with Epic Mickey's file structures and formats."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/abso1utezer0/EpicMickeyLib"
"Bug Tracker" = "https://github.com/abso1utezer0/EpicMickeyLib/issues"